Update github actions workflow for build and publish

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,4 +1,4 @@
-name: Java CI-CD with Maven and Docker
+name: Java CI-CD with Maven and Docker (Multi-Job)
 
 on:
   push:
@@ -8,13 +8,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-publish:
-    name: Build, Publish and Deploy
+  build-java:
+    name: Build Java Application
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -28,6 +24,29 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean package -DskipTests
+
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: java-app-build
+          path: target/
+
+  build-and-push-docker:
+    name: Build and Push Docker Image
+    needs: build-java
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: java-app-build
+
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
