--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -44,10 +44,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: java-app-build
+          path: target/
 
-      - name: Verify downloaded content
-        run: ls -R
-      
       - name: Checkout code
         uses: actions/checkout@v4
 
